# Olio_ohjelmoinnin-kurssi

./: README.md
viikko1/Viikko_1_th1_rondomarvausvehe001/: CMakeLists.txt  main.cpp
viikko1/Viikko_1_th2_randomarvausvehe002/: main.cpp
viikko1/Viikko_1_th3_randomarvausvehe003/: main.cpp
viikko1/build-Viikko_1_th1_rondomarvausvehe001-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
viikko1/build-Viikko_1_th2_randomarvausvehe002-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
viikko1/build-Viikko_1_th3_randomarvausvehe003-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
viikko2/KT2_randomNumber/: game.cpp  game.h  main.cpp
viikko2/build-KT2_randomNumber-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
viikko3/Olio-ohjelmointi_th3_italialainenkokki/: CMakeLists.txt  kokki.h  main.cpp
viikko3/build-Olio-ohjelmointi_th3_italialainenkokki-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
viikko3/build-olio-ohjelmointi_th3_2_italiankokki-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
viikko3/build-olio-ohjelmointi_th3_3_italiankukko-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
viikko3/olio-ohjelmointi_th3_2_italiankokki/: kokki.h  main.cpp
viikko3/olio-ohjelmointi_th3_3_italiankukko/: kokki.h  main.cpp  olio-ohjelmointi_th3_3_italiankukko.pro
viikko4/build-olio_ohjelmointi_TH4_th1-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
viikko4/build-olio_ohjelmointi_TH4_th1_1-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
viikko4/olio_ohjelmointi_TH4_th1/: CMakeLists.txt  asunto.cpp  asunto.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
viikko4/olio_ohjelmointi_TH4_th1_1 TOIMIVA/: CMakeLists.txt  asunto1.cpp  asunto1.h  katutaso.cpp  katutaso.h  kerros.cpp  kerros.h  kerrostalo.cpp  kerrostalo.h  main.cpp
(+34 files in other folders)
